# IE-minor

./: .gitignore  README.md  libfreenect2  nanodet_cam_demo  plan.py  rtt.py
arm/: ld-linux-armhf.so.3  libBrokenLocale.so.1  libanl.so.1  libm.so.6  libnss_dns.so.2  libpthread.so.0  libthread_db.so.1  libutil.so.1
arm-builds/arm-linux-gnueabihf/: libc_malloc_debug.so.0  libdl.so.2  libnsl.so.1  libnss_compat.so.2  libnss_files.so.2  libnss_hesiod.so.2  libresolv.so.2  librt.so.1
arm-builds/nanodet/: CMakeCache.txt
arm-builds/ncnn/: Makefile  cmake_install.cmake  install_manifest.txt
arm-builds/ncnn/benchmark/: Makefile  benchncnn
arm-builds/ncnn/src/: Makefile  cmake_install.cmake
arm-builds/ncnn/tools/: cmake_install.cmake
arm-builds/opencv/: CMakeCache.txt  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  version_string.tmp
arm-builds/opencv/apps/: CTestTestfile.cmake  cmake_install.cmake
arm-builds/opencv/data/: CTestTestfile.cmake  Makefile
behaviour/: plan.py
comp-node/: index.html  package.json  tsconfig.json
comp-node/assets/: node-to-camera-map.json  node-to-strips-map.json
comp-node/src/: behaviour-handlers.ts  calibrate.ts  config.ts  events.ts  express.ts  freenect.ts  index-main.ts  index.html  index.ts  mapNodeListToSolidEvents.ts  mappers.ts  mqtt.ts  nanodet-basic.js  nanodet-basic.wasm  nanodet-wrapper.ts  node-to-camera-map.json  node-to-strips-map.json  observables.ts  path-finding.ts  serial.ts  server.ts  sounds.ts  state.ts  types.d.ts  utils.ts
cppstuff/: trigDist  trigDist.c
gp-1/: game.py  pulser.py
gp-1/lib/: Varspeed.py  easing_functions.py
group/master/: code.py  help.py  settings.py
group/strip/: boot_out.txt  code.py  creature.py  light.py  motorencoder.py  motortest2.py
images/total-annotations/: kinect-v1-julia-1.json  kinect-v1-olaf-1-valid.json  kinect-v1-olaf-2.json  kinect-v1-tieme-1.json  kinect-v2-julia-1.json  train-annotations.json  valid-annotations.json
itsy-bitsy/: behaviour_factories.py  boot_out.txt  code.py  code_b.py  code_old.py  configs.py  copy.sh  kinect.py  test_events.py
itsy-bitsy/System Volume Information/: IndexerVolumeGuid
kinect/: main.py  test.py
kinect-compute/: icp.py  main.py
kinect-cp-1/: blocks.py  code.py  configs.py  kinect.py  path_finding.py
kinect-nn/: CMakeLists.txt  main.cpp  nanodet.cpp  nanodet.h
nanodet-addon/: binding.gyp  package-lock.json  package.json
nanodet-addon/lib/: binding.ts
nanodet-addon/src/: main.cc  nanodet.cc  nanodet.h
nanodet-addon/test/: test_binding.js
nanodet-build/: CMakeCache.txt  cmake_install.cmake  nanodet_demo
nanodet-params/: imagelist.txt  nanodet-int8.param  nanodet-plus-m_320.param  nanodet-plus-m_320.table  to_int8.sh
nanodet-wasm/: CMakeLists.txt  build.sh  nanodetncnn.cpp
proto-3/: boot_out.txt  code.py  code_backup.py  creature.py  creature_old.py  eye.py  settings.py
proto-3/System Volume Information/: IndexerVolumeGuid
proto-3/images/: eye1.json  eye5.json  eye6.json  eye7.json  eye8.json
prototype-1/: circular_encoder.py  code.py  color_misc.py
prototype-1/System Volume Information/: IndexerVolumeGuid
prototype-1/images/: eye-1-1.json  eye-20.json  eye00.json  eye1-1.json  eye11.json  eye22.json  open_eye2.json  open_eye4.json
prototype-2/images/: eye-1-2.json  eye-10.json  eye-12.json  eye-2-2.json  eye-21.json  eye10.json  eye2-2.json
root@10.254.239.1/nanodet/: Makefile  cmake_install.cmake  nanodet_demo
root@10.254.239.1/ncnn/: CMakeCache.txt
root@10.254.239.1/opencv/: CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  install_manifest.txt
scripts/: .python-version  d.sh  eye-2-1.json  eye-22.json  eye0.json  eye02.json  eye1-2.json  eye12.json  eye2-1.json  eye2.json  eye21.json  eye3.json  eye4.json  img_to_arr.py  open_eye.json  open_eye3.json  pixil.json  png_to_pixel_list.ipynb  pull_start_build.sh  test.json
unitv2/: camera_to_mqtt.py  camera_to_node.py  rtt.py
usr-local/: libgomp.so.1.0.0  libstdc++.so.6.0.30
(+459 files in other folders)
